--- a/sass/style.css
+++ b/sass/style.css
@@ -1,1 +1,179 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", "Fascinate", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+}
+
+#bg {
+  display: flex;
+  position: absolute;
+  z-index: -1;
+  justify-content: space-between;
+  height: 100vh;
+  width: 100vw;
+}
+#bg #bg-1, #bg #bg-2, #bg #bg-3, #bg #bg-4, #bg #bg-5 {
+  width: 20vw;
+}
+#bg #bg-1 {
+  background: #405CD9;
+}
+#bg #bg-2 {
+  background: #A755DA;
+}
+#bg #bg-3 {
+  background: #E4325B;
+}
+#bg #bg-4 {
+  background: #EB6D4F;
+}
+#bg #bg-5 {
+  background: #F2CD6E;
+}
+
+main {
+  display: flex;
+  width: 100vw;
+  background: rgba(255, 255, 255, 0.65);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+}
+main #bg-grup {
+  position: absolute;
+  z-index: -1;
+  width: 100vw;
+  height: 50vh;
+  filter: contrast(100%);
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+  position: fixed;
+  width: 70vw;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  border-radius: 20px;
+  height: 6.5vh;
+  padding: 0 2vw;
+  top: 3vh;
+  background: rgba(110, 191, 248, 0);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+header h1 {
+  font-size: 1.3rem;
+  color: #FFF;
+  font-weight: 900;
+  letter-spacing: 1px;
+}
+header #header-div-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+header img {
+  height: 1.6rem;
+}
+header #vertical-bar {
+  background: #fff;
+  width: 2px;
+  height: 30px;
+  border-radius: 10px;
+}
+header #div-imgs-1, header #div-imgs-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+#presentation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+}
+#presentation #div-container {
+  display: flex;
+  width: 75vw;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+#presentation #div-texts h2 {
+  color: #386d91;
+  font-family: "Inter";
+  font-weight: 600;
+  font-size: 4rem;
+}
+#presentation #div-texts h1 {
+  font-family: Inter;
+  font-size: 128px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  background: linear-gradient(97deg, rgba(0, 198, 198, 0.75) 40.02%, rgba(165, 68, 225, 0.912) 80.7%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#presentation #div-texts h1::after {
+  content: "Front-End";
+  font-family: Poppins;
+  background: #FFB800;
+  -webkit-background-clip: text;
+  font-size: 15px;
+  font-weight: 600;
+  padding: 2px 10px;
+  border: solid #FFB800 3px;
+  border-radius: 10px;
+  position: relative;
+  bottom: 50px;
+  left: 25px;
+  font-weight: 700;
+}
+#presentation #div-texts p {
+  width: 30vw;
+  color: #121212;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+}
+#presentation #div-profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(164, 239, 255, 0.76);
+  width: 25vw;
+  height: 50vh;
+  border-radius: 40px;
+}
+#presentation #div-scroll {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 7vh;
+  border: 2px solid #ABABAB;
+  height: 12vh;
+  width: 4vw;
+  border-radius: 30px;
+}
+#presentation #div-scroll img {
+  position: relative;
+  height: 3.5vh;
+}/*# sourceMappingURL=style.css.map */
