--- a/sass/style.css
+++ b/sass/style.css
@@ -12,16 +12,24 @@ a {
   font-size: 0;
 }
 
+html {
+  scroll-snap-type: y mandatory;
+}
+
+body {
+  scroll-snap-type: y mandatory;
+}
+
 #bg {
   display: flex;
   position: absolute;
   z-index: -1;
   justify-content: space-between;
-  height: 100vh;
-  width: 100vw;
+  height: 200%;
+  width: 100%;
 }
 #bg #bg-1, #bg #bg-2, #bg #bg-3, #bg #bg-4, #bg #bg-5 {
-  width: 20vw;
+  width: 20%;
 }
 #bg #bg-1 {
   background: #405CD9;
@@ -41,7 +49,7 @@ a {
 
 main {
   display: flex;
-  width: 100vw;
+  flex-direction: column;
   background: rgba(255, 255, 255, 0.65);
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
@@ -49,9 +57,9 @@ main {
 main #bg-grup {
   position: absolute;
   z-index: -1;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
-  filter: contrast(100%);
+  filter: contrast(150%);
 }
 
 header {
@@ -60,15 +68,16 @@ header {
   justify-content: center;
   justify-content: space-between;
   position: fixed;
+  z-index: 99;
   width: 70vw;
   margin: 0 auto;
   left: 0;
   right: 0;
   border-radius: 20px;
-  height: 6.5vh;
+  height: 7vh;
   padding: 0 2vw;
   top: 3vh;
-  background: rgba(110, 191, 248, 0);
+  background: rgba(17, 95, 151, 0.3);
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
@@ -100,13 +109,17 @@ header #div-imgs-1, header #div-imgs-2 {
   gap: 15px;
 }
 
+section {
+  height: 100vh;
+  width: 100%;
+  scroll-snap-align: center;
+}
+
 #presentation {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
 }
 #presentation #div-container {
   display: flex;
@@ -122,7 +135,7 @@ header #div-imgs-1, header #div-imgs-2 {
 }
 #presentation #div-texts h1 {
   font-family: Inter;
-  font-size: 128px;
+  font-size: 8rem;
   font-style: normal;
   font-weight: 900;
   line-height: normal;
@@ -136,7 +149,7 @@ header #div-imgs-1, header #div-imgs-2 {
   font-family: Poppins;
   background: #FFB800;
   -webkit-background-clip: text;
-  font-size: 15px;
+  font-size: 1.1rem;
   font-weight: 600;
   padding: 2px 10px;
   border: solid #FFB800 3px;
@@ -166,8 +179,9 @@ header #div-imgs-1, header #div-imgs-2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: relative;
   bottom: 7vh;
+  top: 14vh;
   border: 2px solid #ABABAB;
   height: 12vh;
   width: 4vw;
@@ -176,4 +190,146 @@ header #div-imgs-1, header #div-imgs-2 {
 #presentation #div-scroll img {
   position: relative;
   height: 3.5vh;
+}
+
+#about-me {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+#about-me #div-container {
+  display: flex;
+  position: absolute;
+  top: 30vh;
+  gap: 3vw;
+  max-width: 1200px;
+}
+#about-me #div-profile {
+  display: grid;
+  gap: 25px;
+  width: 17vw;
+}
+#about-me #div-profile #div-background {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(164, 239, 255);
+  height: 35vh;
+  width: 17vw;
+  border-radius: 30px;
+}
+#about-me #div-profile #div-background img {
+  height: 30vh;
+}
+#about-me #div-profile #div-technologies {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+#about-me #div-profile #div-technologies p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 900;
+  min-width: 100px;
+  min-height: 40px;
+  border-radius: 7px;
+}
+#about-me #div-profile #div-technologies p:nth-child(1) {
+  background: #FF7554;
+}
+#about-me #div-profile #div-technologies p:nth-child(2) {
+  background: rgba(110, 191, 248, 0.6);
+}
+#about-me #div-profile #div-technologies p:nth-child(3) {
+  background: #f2cd6e;
+}
+#about-me #div-text {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 20px;
+  height: 20vh;
+  width: 70vw;
+  top: 20vh;
+}
+#about-me #div-text h1 {
+  width: 40vw;
+  font-family: Inter;
+  font-size: 4rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  background: linear-gradient(97deg, rgba(0, 198, 198, 0.75) 40.02%, rgba(165, 68, 225, 0.912) 80.7%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#about-me #div-text h1::after {
+  content: "Front-End";
+  font-family: Poppins;
+  background: #FFB800;
+  -webkit-background-clip: text;
+  font-size: 1.1rem;
+  font-weight: 600;
+  padding: 2px 10px;
+  border: solid #FFB800 3px;
+  border-radius: 10px;
+  position: relative;
+  bottom: 10px;
+  left: 15px;
+  font-weight: 700;
+}
+#about-me #div-text p {
+  width: 30vw;
+  color: #161616;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+#about-me #div-nickname {
+  position: absolute;
+  bottom: 4vh;
+  right: 18vh;
+}
+#about-me #div-nickname h1 {
+  font-family: Inter;
+  font-size: 8rem;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  background: linear-gradient(97deg, rgba(0, 198, 198, 0.75) 40.02%, rgba(165, 68, 225, 0.912) 80.7%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+shader-art {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+shader-art canvas {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+#about-me #div-bg {
+  position: absolute;
+  z-index: -1;
+  top: 13vh;
+  width: 100%;
+  height: 35vh;
+}
+
+.dg.ac {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
