--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,16 +6,24 @@
     justify-content: center;
 }
 
+html {
+    scroll-snap-type: y mandatory;
+}
+
+body {
+    scroll-snap-type: y mandatory;
+}
+
 #bg {
     display: flex;
     position: absolute;
     z-index: -1;
     justify-content: space-between;
-    height: 100vh;
-    width: 100vw;
+    height: 200%;
+    width: 100%;
     
     #bg-1, #bg-2, #bg-3, #bg-4, #bg-5 {
-        width: 20vw;
+        width: 20%;
     }
     #bg-1 {
         background: #405CD9;
@@ -33,20 +41,23 @@
         background: #F2CD6E;
     }
 }
+
 main {
     display: flex;
+    flex-direction: column;
     // height: 100vh;
-    width: 100vw;
+    // width: 100vw;
     background: rgba(255, 255, 255, 0.65);
     backdrop-filter: blur(20px);
 
     #bg-grup {
         position: absolute;
         z-index: -1;
-        width: 100vw;
+        width: 100%;
         height: 50vh;
-        filter: contrast(100%);
+        filter: contrast(150%);
     }
+
 }
 
 
@@ -55,15 +66,16 @@ header {
     @include centerItem();
     justify-content: space-between;
     position: fixed;
+    z-index: 99;
     width: 70vw;
     margin: 0 auto;
     left: 0;
     right: 0;
     border-radius: 20px;
-    height: 6.5vh;
+    height: 7vh;
     padding: 0 2vw;
     top: 3vh;
-    background: rgba(110, 191, 248, 0);
+    background: rgba(17, 95, 151, 0.3);
 
     backdrop-filter: blur(10px);
 
@@ -93,11 +105,15 @@ header {
     
 }
 
+section {
+    height: 100vh;
+    width: 100%;
+    scroll-snap-align: center;
+}
+
 #presentation {
     @include centerItem();
     flex-direction: column;
-    height: 100vh;
-    width: 100vw;
 
     #div-container {
         display: flex;
@@ -107,7 +123,6 @@ header {
     }
 
     #div-texts {
-        // width: 30vw;
 
         h2 {
             color: #386d91;
@@ -115,9 +130,10 @@ header {
             font-weight: 600;
             font-size: 4rem;
         }
+        // É possível criar uma função para estiliar elementos que possuem esse efeito
         h1 {
             font-family: Inter;
-            font-size: 128px;
+            font-size: 8rem;
             font-style: normal;
             font-weight: 900;
             line-height: normal;
@@ -133,7 +149,7 @@ header {
                 background: #FFB800;
                 -webkit-background-clip: text;
 
-                font-size: 15px;
+                font-size: 1.1rem;
                 font-weight: 600;
                 padding: 2px 10px;
                 border: solid #FFB800 3px;
@@ -166,8 +182,9 @@ header {
 
     #div-scroll {
         @include centerItem(); // Será animação
-        position: absolute;
+        position: relative;
         bottom: 7vh;
+        top: 14vh;
         border: 2px solid #ABABAB;
         height: 12vh;
         width: 4vw;
@@ -180,3 +197,159 @@ header {
     }
 
 }
+
+#about-me {
+    @include centerItem();
+    position: relative;
+
+    #div-container {
+        display: flex;
+        position: absolute;
+        top: 30vh;
+        gap: 3vw;
+        // Colocar em todas as sections
+        max-width: 1200px;
+    }
+
+    #div-profile {
+        display: grid;
+        gap: 25px;
+        width: 17vw;
+
+        #div-background {
+            @include centerItem();
+            background: rgba(164, 239, 255, 1);
+            height: 35vh;
+            width: 17vw;
+            border-radius: 30px;
+
+            img {
+                height: 30vh;
+            }
+        }
+
+        #div-technologies {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+            p {
+                @include centerItem();
+                color: #000;
+                text-align: center;
+                font-family: Inter;
+                font-size: 1.5rem;
+                font-style: normal;
+                font-weight: 900;
+                min-width: 100px;
+                min-height: 40px;
+                border-radius: 7px;
+            
+            }
+            p:nth-child(1) {
+                background: #FF7554;
+            }
+            p:nth-child(2) {
+                background: rgba(110, 191, 248, 0.60);
+            }
+            p:nth-child(3) {
+                background: #f2cd6e;
+            }
+        }
+    }
+
+    #div-text {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        gap: 20px;
+        height: 20vh;
+        width: 70vw;
+        top: 20vh;
+
+        h1 {
+            width: 40vw;
+            font-family: Inter;
+            font-size: 4rem;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+
+            background: linear-gradient(97deg, rgba(0, 198, 198, 0.75) 40.02%, rgba(165, 68, 225, 0.912) 80.7%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            
+            &::after {
+                content: 'Front-End';
+                font-family: Poppins;
+                background: #FFB800;
+                -webkit-background-clip: text;
+
+                font-size: 1.1rem;
+                font-weight: 600;
+                padding: 2px 10px;
+                border: solid #FFB800 3px;
+                border-radius: 10px;
+
+                position: relative;
+                bottom: 10px;
+                left: 15px;
+
+                font-weight: 700;
+            }
+        }
+
+        p {
+            width: 30vw;
+            color: #161616;
+            font-family: Inter;
+            font-size: 1.25rem;
+            font-weight: 300;
+        }
+
+    }
+
+    #div-nickname {
+        position: absolute;
+        bottom: 4vh;
+        right: 18vh;
+
+        h1 {
+            font-family: Inter;
+            font-size: 8rem;
+            font-style: normal;
+            font-weight: 900;
+            line-height: normal;
+
+            background: linear-gradient(97deg, rgba(0, 198, 198, 0.75) 40.02%, rgba(165, 68, 225, 0.912) 80.7%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+    }
+
+}
+
+shader-art {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  
+  shader-art canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  #about-me #div-bg {
+    position: absolute;
+    z-index: -1;
+    top: 13vh;
+    width: 100%;
+    height: 35vh;
+  }
+
+  .dg.ac {
+    display: none;
+  }
