--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@ body {
     position: absolute;
     z-index: -1;
     justify-content: space-between;
-    height: 200%;
+    height: 300%;
     width: 100%;
     
     #bg-1, #bg-2, #bg-3, #bg-4, #bg-5 {
@@ -114,9 +114,12 @@ section {
 #presentation {
     @include centerItem();
     flex-direction: column;
+    position: relative;
 
     #div-container {
         display: flex;
+        position: absolute;
+        top: 30vh;
         width: 75vw;
         margin: 0 auto;
         justify-content: space-between;
@@ -182,9 +185,9 @@ section {
 
     #div-scroll {
         @include centerItem(); // Será animação
-        position: relative;
-        bottom: 7vh;
-        top: 14vh;
+        position: absolute;
+        bottom: 5vh;
+        // top: 14vh;
         border: 2px solid #ABABAB;
         height: 12vh;
         width: 4vw;
@@ -336,20 +339,70 @@ shader-art {
     height: 100%;
   }
   
-  shader-art canvas {
+shader-art canvas {
     display: block;
     width: 100%;
     height: 100%;
-  }
+}
 
-  #about-me #div-bg {
+#about-me #div-bg {
     position: absolute;
     z-index: -1;
     top: 13vh;
     width: 100%;
     height: 35vh;
-  }
+}
 
-  .dg.ac {
+.dg.ac {
     display: none;
-  }
+}
+
+#projects {
+    @include centerItem();
+    position: relative;
+
+    .formats {
+        position: absolute;
+        scale: 1.1;
+        z-index: -1;
+    }
+    #circle {
+        width: 15rem;
+        height: 15rem;
+        border-radius: 50%;
+        border: 2px solid #FFB800;
+    }
+    #square {
+        width: 15rem;
+        height: 15rem;
+        border: 2px solid #FFB800;
+    }
+    #rectangle {
+        width: 24rem;
+        height: 14rem;
+        border: 2px solid #FFB800;     
+    }
+    #star {
+        img {
+            height: 200px;
+        }
+    }
+    #elipse {
+        width: 24rem;
+        height: 14rem;
+        border: 2px solid #FFB800;
+        border-radius: 50%;
+       }
+    
+    //    Teste visual do carrosel
+    #div-container {
+        div {
+            z-index: 9;
+            background: #386d91;
+            height: 60vh;
+            width: 60vw;
+            border-radius: 40px;
+        }
+    }
+
+} 
