fix: comentando scroll mandatory

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,13 +6,13 @@
     justify-content: center;
 }
 
-html {
-    scroll-snap-type: y mandatory;
-}
+// html {
+//     scroll-snap-type: y mandatory;
+// }
 
-body {
-    scroll-snap-type: y mandatory;
-}
+// body {
+//     scroll-snap-type: y mandatory;
+// }
 
 #bg {
     display: flex;
