fix: correção de h1 width responsivo

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -270,7 +270,7 @@ section {
         top: 20vh;
 
         h1 {
-            width: 40vw;
+            // width: 40vw;
             font-family: Inter;
             font-size: 4rem;
             font-style: normal;
