--- a/sass/style.css
+++ b/sass/style.css
@@ -25,7 +25,7 @@ body {
   position: absolute;
   z-index: -1;
   justify-content: space-between;
-  height: 300%;
+  height: 400%;
   width: 100%;
 }
 #bg #bg-1, #bg #bg-2, #bg #bg-3, #bg #bg-4, #bg #bg-5 {
@@ -54,12 +54,16 @@ main {
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
 }
-main #bg-grup {
+main #bg-grup-first, main #bg-grup-second {
   position: absolute;
   z-index: -1;
   width: 100%;
   height: 50vh;
   filter: contrast(150%);
+}
+main #bg-grup-second {
+  bottom: 0;
+  rotate: 180deg;
 }
 
 header {
@@ -387,7 +391,7 @@ shader-art canvas {
   justify-content: center;
   position: absolute;
   rotate: 90deg;
-  top: 35vh;
+  top: 40vh;
   left: -10vw;
   justify-content: start;
   border: 2px solid #FFB800;
@@ -449,4 +453,121 @@ shader-art canvas {
 }
 #projects #div-container #div-carousel #div-carousel-container .carousel-item-3 {
   background: #A755DA;
+}
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  scroll-snap-align: center;
+}
+footer #contact {
+  display: grid;
+  padding-top: 10vh;
+  height: 80vh;
+  width: 70vw;
+}
+footer #contact h1 {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 6rem;
+  font-style: normal;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+footer #contact h1 span {
+  color: transparent;
+  -webkit-text-stroke: 3px #FFF;
+  position: relative;
+}
+footer #contact h1 span::before {
+  content: "";
+  background: rgba(110, 191, 248, 0.6);
+  height: 10vh;
+  width: 35vw;
+  display: block;
+  position: absolute;
+  top: 26vh;
+  right: 27.2vw;
+  z-index: -1;
+}
+footer #contact #button {
+  display: grid;
+  place-items: center;
+  justify-self: end;
+  width: 20vw;
+  border-radius: 30px;
+  overflow: hidden;
+}
+footer #contact #button h3 {
+  z-index: 1;
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 800;
+}
+footer #contact #button shader-art {
+  z-index: -1;
+  position: absolute;
+  background: #405CD9;
+  height: 18vh;
+  width: 20vw;
+}
+footer #separate-div {
+  height: 2px;
+  width: 70vw;
+  border-radius: 2px;
+  background: #fff;
+  margin: 30px 0 20px 0;
+}
+footer #footer {
+  display: flex;
+  justify-content: space-between;
+  height: 20vh;
+  width: 70vw;
+}
+footer #footer h3 {
+  text-align: center;
+  font-family: Poppins;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 900;
+  background: linear-gradient(90deg, rgb(34, 163, 255) 6.47%, rgba(110, 191, 248, 0) 135.4%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+footer #footer #div-container {
+  display: flex;
+  gap: 5vw;
+}
+footer #footer #div-container .div-links {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+footer #footer #div-container .div-links h2 {
+  color: #FFF;
+  text-align: center;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+}
+footer #footer #div-container .div-links ul {
+  display: grid;
+  justify-content: space-between;
+  height: 10vh;
+}
+footer #footer #div-container .div-links ul li {
+  color: #FFF;
+  list-style: none;
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
 }/*# sourceMappingURL=style.css.map */
