--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@ body {
     position: absolute;
     z-index: -1;
     justify-content: space-between;
-    height: 300%;
+    height: 400%;
     width: 100%;
     
     #bg-1, #bg-2, #bg-3, #bg-4, #bg-5 {
@@ -45,18 +45,21 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    // height: 100vh;
-    // width: 100vw;
     background: rgba(255, 255, 255, 0.65);
     backdrop-filter: blur(20px);
 
-    #bg-grup {
+    #bg-grup-first, #bg-grup-second {
         position: absolute;
         z-index: -1;
         width: 100%;
         height: 50vh;
         filter: contrast(150%);
     }
+    #bg-grup-second {
+        bottom: 0;
+        rotate: 180deg;
+    }
+    
 
 }
 
@@ -159,6 +162,7 @@ section {
                 border-radius: 10px;
 
                 position: relative;
+                // Corrigir esses px
                 bottom: 50px;
                 left: 25px;
 
@@ -408,7 +412,7 @@ shader-art canvas {
             @include centerItem();
             position: absolute;
             rotate: 90deg;
-            top: 35vh;
+            top: 40vh;
             left: -10vw;
 
             justify-content: start;
@@ -510,3 +514,152 @@ shader-art canvas {
     }
 
 } 
+
+footer {
+    @include centerItem();
+    flex-direction: column;
+
+    height: 100vh;
+    scroll-snap-align: center;
+
+    #contact {
+        display: grid;
+        padding-top: 10vh;
+        height: 80vh;
+        width: 70vw;
+
+        h1 {
+            color: #FFF;
+            font-family: Inter;
+            font-size: 6rem;
+            font-style: normal;
+            font-weight: 900;
+            text-transform: uppercase;
+
+            span {
+                color: transparent;
+                -webkit-text-stroke: 3px #FFF;
+                position: relative;
+
+                &::before {
+                    content: '';
+                    background: rgba(110, 191, 248, 0.60);
+                    height: 10vh;
+                    width: 35vw;
+                    display: block;
+                    position: absolute;
+
+                    top: 26vh;
+                    right: 27.2vw;
+                    z-index: -1;
+                }
+
+            }
+        }
+
+        #button {
+            display: grid;
+            // position: relative;
+            place-items: center;
+            justify-self: end;
+            // top: 30vh;
+            // height: 18vh;
+            width: 20vw;
+            border-radius: 30px;
+            overflow: hidden;
+
+            h3 {
+                z-index: 1;
+                color: #fff;
+                text-align: center;
+                font-family: Inter;
+                font-size: 64px;
+                font-style: normal;
+                font-weight: 800;
+            }
+
+            shader-art {
+                z-index: -1;
+                position: absolute;
+                // border-radius: 30px;
+                background: #405CD9;
+                height: 18vh;
+                width: 20vw;
+            }
+
+        }
+
+    }
+
+    #separate-div {
+        height: 2px;
+        width: 70vw;
+        border-radius: 2px;
+        background: #fff;
+        margin: 30px 0 20px 0;
+    }
+
+    #footer {
+        display: flex;
+        justify-content: space-between;
+        height: 20vh;
+        width: 70vw;
+
+        h3 {
+            text-align: center;
+            font-family: Poppins;
+            font-size: 2rem;
+            font-style: normal;
+            font-weight: 900;
+
+            background: linear-gradient(90deg, rgb(34, 163, 255)6.47%, rgba(110, 191, 248, 0.00) 135.4%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        #div-container {
+            display: flex;
+            gap: 5vw;
+
+
+                .div-links {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                    
+                    h2 {
+                        color: #FFF;
+                        text-align: center;
+                        font-family: Inter;
+                        font-size: 24px;
+                        font-style: normal;
+                        font-weight: 300;
+                    }
+
+                    ul {
+                        display: grid;
+                        justify-content: space-between;
+                        height: 10vh;
+
+                        li {
+                            color: #FFF;
+                            list-style: none;
+                            font-family: Inter;
+                            font-size: 15px;
+                            font-style: normal;
+                            font-weight: 300;line-height: normal;
+                        }
+
+                    }
+
+                        
+                        
+                }
+
+            
+        }
+
+    }
+
+}
