fix & feat: footer

--- a/sass/style.css
+++ b/sass/style.css
@@ -348,7 +348,6 @@ shader-art canvas {
 }
 #projects .formats {
   position: absolute;
-  scale: 1.1;
   z-index: -1;
 }
 #projects #circle {
@@ -488,8 +487,8 @@ footer #contact h1 span::before {
   width: 35vw;
   display: block;
   position: absolute;
-  top: 26vh;
-  right: 27.2vw;
+  top: 190px;
+  right: 420px;
   z-index: -1;
 }
 footer #contact #button {
@@ -521,7 +520,7 @@ footer #separate-div {
   width: 70vw;
   border-radius: 2px;
   background: #fff;
-  margin: 30px 0 20px 0;
+  margin: 30px 0 10px 0;
 }
 footer #footer {
   display: flex;
@@ -551,16 +550,15 @@ footer #footer #div-container .div-links {
 }
 footer #footer #div-container .div-links h2 {
   color: #FFF;
-  text-align: center;
   font-family: Inter;
-  font-size: 24px;
+  font-size: 1.3rem;
   font-style: normal;
   font-weight: 300;
 }
 footer #footer #div-container .div-links ul {
   display: grid;
   justify-content: space-between;
-  height: 10vh;
+  height: 13vh;
 }
 footer #footer #div-container .div-links ul li {
   color: #FFF;
