--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -11,3 +11,21 @@ a {
     padding: 0;
     font-size: 0;
 }
+
+:root {
+    --color-background-main: rgba(255, 255, 255, 0.65);
+
+    // Section Presentation
+    --color-yellow-talk: #FFB800;
+    --color-text: #121212;
+    --color-background-blue: rgba(164, 239, 255, 0.76);
+    --color-grey: #ABABAB;
+
+    &.dark-mode {
+        --color-background-main: rgba(0, 0, 0, 0.85);
+        --color-yellow-talk: #C0C0C0;
+        --color-text: #fff;
+        --color-background-blue: rgba(27, 54, 72, 0.70);
+        // --color-grey: ;
+    }
+}
