--- a/sass/style.css
+++ b/sass/style.css
@@ -12,6 +12,20 @@ a {
   font-size: 0;
 }
 
+:root {
+  --color-background-main: rgba(255, 255, 255, 0.65);
+  --color-yellow-talk: #FFB800;
+  --color-text: #121212;
+  --color-background-blue: rgba(164, 239, 255, 0.76);
+  --color-grey: #ABABAB;
+}
+:root.dark-mode {
+  --color-background-main: rgba(0, 0, 0, 0.85);
+  --color-yellow-talk: #C0C0C0;
+  --color-text: #fff;
+  --color-background-blue: rgba(27, 54, 72, 0.70);
+}
+
 html {
   scroll-snap-type: y mandatory;
 }
@@ -50,7 +64,7 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  background: rgba(255, 255, 255, 0.65);
+  background: var(--color-background-main);
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
 }
@@ -154,12 +168,12 @@ section {
 #presentation #div-texts h1::after {
   content: "Front-End";
   font-family: Poppins;
-  background: #FFB800;
+  background: var(--color-yellow-talk);
   -webkit-background-clip: text;
   font-size: 1.1rem;
   font-weight: 600;
   padding: 2px 10px;
-  border: solid #FFB800 3px;
+  border: solid var(--color-yellow-talk) 3px;
   border-radius: 10px;
   position: relative;
   bottom: 50px;
@@ -168,7 +182,7 @@ section {
 }
 #presentation #div-texts p {
   width: 30vw;
-  color: #121212;
+  color: var(--color-text);
   font-family: Inter;
   font-size: 20px;
   font-weight: 400;
@@ -177,7 +191,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(164, 239, 255, 0.76);
+  background: var(--color-background-blue);
   width: 25vw;
   height: 50vh;
   border-radius: 40px;
@@ -188,7 +202,7 @@ section {
   justify-content: center;
   position: absolute;
   bottom: 5vh;
-  border: 2px solid #ABABAB;
+  border: 2px solid var(--color-grey);
   height: 12vh;
   width: 4vw;
   border-radius: 30px;
@@ -220,7 +234,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgb(164, 239, 255);
+  background: var(--color-background-blue);
   height: 35vh;
   width: 17vw;
   border-radius: 30px;
@@ -237,7 +251,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #000;
+  color: var(--color-text);
   text-align: center;
   font-family: Inter;
   font-size: 1.5rem;
@@ -279,12 +293,12 @@ section {
 #about-me #div-text h1::after {
   content: "Front-End";
   font-family: Poppins;
-  background: #FFB800;
+  background: var(--color-yellow-talk);
   -webkit-background-clip: text;
   font-size: 1.1rem;
   font-weight: 600;
   padding: 2px 10px;
-  border: solid #FFB800 3px;
+  border: solid var(--color-yellow-talk) 3px;
   border-radius: 10px;
   position: relative;
   bottom: 10px;
@@ -293,7 +307,7 @@ section {
 }
 #about-me #div-text p {
   width: 30vw;
-  color: #161616;
+  color: var(--color-text);
   font-family: Inter;
   font-size: 1.25rem;
   font-weight: 300;
@@ -354,17 +368,17 @@ shader-art canvas {
   width: 15rem;
   height: 15rem;
   border-radius: 50%;
-  border: 2px solid #FFB800;
+  border: 2px solid var(--color-yellow-talk);
 }
 #projects #square {
   width: 15rem;
   height: 15rem;
-  border: 2px solid #FFB800;
+  border: 2px solid var(--color-yellow-talk);
 }
 #projects #rectangle {
   width: 24rem;
   height: 14rem;
-  border: 2px solid #FFB800;
+  border: 2px solid var(--color-yellow-talk);
 }
 #projects #star img {
   height: 200px;
@@ -372,7 +386,7 @@ shader-art canvas {
 #projects #elipse {
   width: 24rem;
   height: 14rem;
-  border: 2px solid #FFB800;
+  border: 2px solid var(--color-yellow-talk);
   border-radius: 50%;
 }
 #projects #div-container {
@@ -393,7 +407,7 @@ shader-art canvas {
   top: 40vh;
   left: -10vw;
   justify-content: start;
-  border: 2px solid #FFB800;
+  border: 2px solid var(--color-yellow-talk);
   border-radius: 20px;
   height: 3.6rem;
   width: 32vw;
