--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,7 +45,7 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    background: rgba(255, 255, 255, 0.65);
+    background: var(--color-background-main);
     backdrop-filter: blur(20px);
 
     #bg-grup-first, #bg-grup-second {
@@ -152,13 +152,13 @@ section {
             &::after {
                 content: 'Front-End';
                 font-family: Poppins;
-                background: #FFB800;
+                background: var(--color-yellow-talk);
                 -webkit-background-clip: text;
 
                 font-size: 1.1rem;
                 font-weight: 600;
                 padding: 2px 10px;
-                border: solid #FFB800 3px;
+                border: solid var(--color-yellow-talk) 3px;
                 border-radius: 10px;
 
                 position: relative;
@@ -172,7 +172,7 @@ section {
         } 
         p {
             width: 30vw;
-            color: #121212;
+            color: var(--color-text);
             font-family: Inter;
             font-size: 20px;
             font-weight: 400;
@@ -181,7 +181,7 @@ section {
 
     #div-profile {
         @include centerItem();
-        background: rgba(164, 239, 255, 0.76);
+        background: var(--color-background-blue);
         width: 25vw;
         height: 50vh;
         border-radius: 40px;
@@ -192,7 +192,7 @@ section {
         position: absolute;
         bottom: 5vh;
         // top: 14vh;
-        border: 2px solid #ABABAB;
+        border: 2px solid var(--color-grey);
         height: 12vh;
         width: 4vw;
         border-radius: 30px;
@@ -225,7 +225,7 @@ section {
 
         #div-background {
             @include centerItem();
-            background: rgba(164, 239, 255, 1);
+            background: var(--color-background-blue);
             height: 35vh;
             width: 17vw;
             border-radius: 30px;
@@ -241,7 +241,7 @@ section {
             gap: 15px;
             p {
                 @include centerItem();
-                color: #000;
+                color: var(--color-text);
                 text-align: center;
                 font-family: Inter;
                 font-size: 1.5rem;
@@ -289,13 +289,13 @@ section {
             &::after {
                 content: 'Front-End';
                 font-family: Poppins;
-                background: #FFB800;
+                background: var(--color-yellow-talk);
                 -webkit-background-clip: text;
 
                 font-size: 1.1rem;
                 font-weight: 600;
                 padding: 2px 10px;
-                border: solid #FFB800 3px;
+                border: solid var(--color-yellow-talk) 3px;
                 border-radius: 10px;
 
                 position: relative;
@@ -308,7 +308,7 @@ section {
 
         p {
             width: 30vw;
-            color: #161616;
+            color: var(--color-text);
             font-family: Inter;
             font-size: 1.25rem;
             font-weight: 300;
@@ -375,17 +375,17 @@ shader-art canvas {
         width: 15rem;
         height: 15rem;
         border-radius: 50%;
-        border: 2px solid #FFB800;
+        border: 2px solid var(--color-yellow-talk);
     }
     #square {
         width: 15rem;
         height: 15rem;
-        border: 2px solid #FFB800;
+        border: 2px solid var(--color-yellow-talk);
     }
     #rectangle {
         width: 24rem;
         height: 14rem;
-        border: 2px solid #FFB800;     
+        border: 2px solid var(--color-yellow-talk);     
     }
     #star {
         img {
@@ -395,7 +395,7 @@ shader-art canvas {
     #elipse {
         width: 24rem;
         height: 14rem;
-        border: 2px solid #FFB800;
+        border: 2px solid var(--color-yellow-talk);
         border-radius: 50%;
 
        
@@ -416,7 +416,7 @@ shader-art canvas {
             left: -10vw;
 
             justify-content: start;
-            border: 2px solid #FFB800;
+            border: 2px solid var(--color-yellow-talk);
             border-radius: 20px;
             height: 3.6rem;
             width: 32vw;
