feat: & fix: dark mode

--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -13,6 +13,7 @@ a {
 }
 
 :root {
+    // Utilzar $cor 
     --color-background-main: rgba(255, 255, 255, 0.65);
 
     // Section Presentation
@@ -26,6 +27,5 @@ a {
         --color-yellow-talk: #C0C0C0;
         --color-text: #fff;
         --color-background-blue: rgba(27, 54, 72, 0.70);
-        // --color-grey: ;
     }
 }
