--- a/sass/style.css
+++ b/sass/style.css
@@ -18,16 +18,32 @@ a {
   --color-text: #121212;
   --color-background-blue: rgba(164, 239, 255, 0.76);
   --color-grey: #ABABAB;
+  --color-scrollbar-bg-yellow-black: #f2cd6e66;
+  --color-scrollbar-thumb-blue-talk: #12b4d1;
 }
 :root.dark-mode {
   --color-background-main: rgba(0, 0, 0, 0.85);
   --color-yellow-talk: #C0C0C0;
   --color-text: #fff;
   --color-background-blue: rgba(27, 54, 72, 0.70);
+  --color-scrollbar-bg-yellow-black: rgba(0, 0, 0, 0.90);
+  --color-scrollbar-thumb-blue-talk: #c0c0c0df;
 }
 
 html {
   scroll-snap-type: y mandatory;
+}
+html ::-webkit-scrollbar {
+  width: 12px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+html ::-webkit-scrollbar-track {
+  background: var(--color-scrollbar-bg-yellow-black);
+}
+html ::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+  border: 3px solid var(--color-scrollbar-thumb-blue-talk);
 }
 
 body {
