--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,21 @@
 
 html {
     scroll-snap-type: y mandatory;
+
+    // scrollbar / barra de navegação
+    ::-webkit-scrollbar {
+        width: 12px;
+        transition: .5s;
+    }
+    ::-webkit-scrollbar-track {
+        background: var(--color-scrollbar-bg-yellow-black);
+    }
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 12px;
+        border-radius: 12px;
+        border: 3px solid var(--color-scrollbar-thumb-blue-talk);
+    }
+
 }
 
 body {
