--- a/sass/style.css
+++ b/sass/style.css
@@ -521,8 +521,8 @@ footer #contact h1 span::before {
   width: 35vw;
   display: block;
   position: absolute;
-  top: 190px;
-  right: 420px;
+  top: 46px;
+  left: 1.2vw;
   z-index: -1;
 }
 footer #contact #button {
