--- a/sass/style.scss
+++ b/sass/style.scss
@@ -572,8 +572,8 @@ footer {
                     display: block;
                     position: absolute;
 
-                    top: 190px;
-                    right: 420px;
+                    top: 46px;
+                    left: 1.2vw;
                     z-index: -1;
                 }
 
