--- a/sass/style.scss
+++ b/sass/style.scss
@@ -88,7 +88,7 @@ header {
     margin: 0 auto;
     left: 0;
     right: 0;
-    border-radius: 20px;
+    border-radius: 2.68vh;
     height: 7vh;
     padding: 0 2vw;
     top: 3vh;
@@ -225,7 +225,7 @@ section {
         // top: 14vh;
         border: 2px solid var(--color-grey);
         height: 12vh;
-        width: 4vw;
+        width: 60px;
         border-radius: 30px;
 
         img {
@@ -695,3 +695,5 @@ footer {
     }
 
 }
+
+// Responsividade
