fix: picture width

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -252,13 +252,13 @@ section {
     #div-profile {
         display: grid;
         gap: 25px;
-        width: 17vw;
+        // width: 17vw;
 
         #div-background {
             @include centerItem();
             background: var(--color-background-blue);
             height: 35vh;
-            width: 17vw;
+            width: 260px;
             border-radius: 30px;
            
             overflow: hidden;
