--- a/sass/style.css
+++ b/sass/style.css
@@ -244,7 +244,6 @@ section {
 #about-me #div-profile {
   display: grid;
   gap: 25px;
-  width: 17vw;
 }
 #about-me #div-profile #div-background {
   display: flex;
@@ -252,7 +251,7 @@ section {
   justify-content: center;
   background: var(--color-background-blue);
   height: 35vh;
-  width: 17vw;
+  width: 260px;
   border-radius: 30px;
   overflow: hidden;
 }
