--- a/sass/style.css
+++ b/sass/style.css
@@ -261,7 +261,7 @@ section {
 }
 #about-me #div-profile #div-technologies {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 15px;
 }
 #about-me #div-profile #div-technologies p {
@@ -271,10 +271,10 @@ section {
   color: var(--color-text);
   text-align: center;
   font-family: Inter;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 900;
-  min-width: 100px;
+  min-width: 40px;
   min-height: 40px;
   border-radius: 7px;
 }
@@ -285,7 +285,22 @@ section {
   background: rgba(110, 191, 248, 0.6);
 }
 #about-me #div-profile #div-technologies p:nth-child(3) {
+  background: #cb6699;
+}
+#about-me #div-profile #div-technologies p:nth-child(4) {
   background: #f2cd6e;
+}
+#about-me #div-profile #div-technologies p:nth-child(5) {
+  background: linear-gradient(90deg, rgb(242, 78, 30) 0%, rgb(255, 114, 98) 20%, rgb(162, 89, 255) 43%, rgb(26, 188, 254) 63%, rgb(10, 207, 131) 84%);
+}
+#about-me #div-profile #div-technologies p:nth-child(6) {
+  background: #744e3b;
+}
+#about-me #div-profile #div-technologies p:nth-child(7) {
+  background: #556096;
+}
+#about-me #div-profile #div-technologies p:nth-child(8) {
+  background: #086590;
 }
 #about-me #div-text {
   display: flex;
@@ -625,5 +640,134 @@ footer #footer #div-container .div-links ul li {
   }
   footer #contact h1 {
     font-size: 5rem;
+  }
+}
+@media (max-width: 1105px) {
+  #presentation #div-container {
+    width: 85vw;
+  }
+}
+@media (max-width: 430px) {
+  main #bg-grup-first {
+    height: 15vh;
+  }
+  header {
+    height: 65px;
+    width: 93vw;
+    padding: 25px;
+    top: 2vh;
+  }
+  #presentation #div-container {
+    display: grid;
+    top: 13vh;
+    gap: 2vh;
+  }
+  #presentation #div-container #div-texts #h1-name {
+    font-size: 6rem;
+  }
+  #presentation #div-container #div-texts p {
+    display: none;
+  }
+  #presentation #div-container #div-profile video {
+    width: 100%;
+  }
+  #presentation #div-scroll {
+    bottom: 1vh;
+  }
+  #about-me #div-bg {
+    top: 12vh;
+    height: 20vh;
+  }
+  #about-me #div-container {
+    flex-direction: column;
+    gap: 2vh;
+    top: 20vh;
+    width: 95vw;
+  }
+  #about-me #div-container #div-profile {
+    display: flex;
+  }
+  #about-me #div-container #div-profile #div-background {
+    height: 200px;
+    width: 350px;
+  }
+  #about-me #div-container #div-profile #div-background img {
+    height: 25vh;
+  }
+  #about-me #div-container #div-profile #div-technologies {
+    width: 100%;
+    align-self: end;
+    gap: 8px;
+  }
+  #about-me #div-container #div-profile #div-technologies p {
+    min-height: 35px;
+  }
+  #about-me #div-text {
+    top: 0;
+    width: 100%;
+  }
+  #about-me #div-text .gradient-sensitive {
+    font-size: 2.5rem;
+  }
+  #about-me #div-text h1::after {
+    bottom: 20px;
+    font-size: 0.875rem;
+  }
+  #about-me #div-text p {
+    width: 100%;
+  }
+  #about-me #div-nickname {
+    display: none;
+  }
+  #projects {
+    max-width: 100vw;
+  }
+  #projects #div-container {
+    flex-direction: column;
+    width: 100%;
+    padding: 20px;
+  }
+  #projects #div-container #div-title {
+    rotate: 0deg;
+    width: 100%;
+    top: -16vh;
+    padding: 10px;
+    left: 0;
+  }
+  #projects #div-container #div-title h1 {
+    font-size: 3rem;
+  }
+  #projects #div-container #div-carousel {
+    position: absolute;
+    top: 4vh;
+  }
+  #projects #div-container #div-carousel #div-carousel-container {
+    padding: 0 10vw;
+    display: flex;
+    align-items: center;
+    max-width: 100vw;
+    scroll-snap-type: x mandatory;
+  }
+  #projects #div-container #div-carousel #div-carousel-container .active {
+    min-width: 80vw;
+    min-height: 75vh;
+  }
+  #div-carousel #div-carousel-container .carousel-item {
+    min-width: 70vw;
+    min-height: 55vh;
+  }
+  #footer {
+    display: none !important;
+  }
+}
+@media (max-width: 930px) {
+  #about-me #div-container {
+    max-width: 400px;
+  }
+  #about-me #div-text h1 {
+    font-size: 1rem;
+  }
+  footer #contact h1 {
+    font-size: 2rem;
   }
 }/*# sourceMappingURL=style.css.map */
